[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/enemies/goblin.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/goblin_weapon.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/goblin.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 12 )

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, -9.53674e-07 ), Vector2( -6, 2 ), Vector2( -6, 0.999999 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.19209e-07, 1.43051e-06 ), Vector2( -9.5, -3 ), Vector2( -19, 0 ), Vector2( -10, -3 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite/weapon:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitbox:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("hitbox:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.19209e-07, 1.43051e-06 ), Vector2( 0, 0.7 ), Vector2( 1.19209e-07, 1.43051e-06 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite/weapon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sprite/weapon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="goblin" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -13, -2 )
texture = ExtResource( 3 )

[node name="weapon" type="Sprite" parent="sprite"]
position = Vector2( -6, 0.999999 )
z_index = -1
texture = ExtResource( 2 )

[node name="range_ray" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -20, 0 )

[node name="hitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -21, -4 )
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="hurt_anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 5 )
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
